--- a/styles/home.css
+++ b/styles/home.css
@@ -14,6 +14,19 @@ body {
     left: 0;
     
 }
+.overlay {
+    z-index: 200;
+    position: fixed;
+    display: none;
+    place-items: center;
+    background-color: black;
+    color: #fff;
+    top: 0;
+    right: 0;
+    left: 0;
+    bottom: 0;
+    
+}
 /* Hide scrollbar for Chrome, Safari and Opera */
 .container-home::-webkit-scrollbar {
     display: none;
@@ -218,7 +231,10 @@ body {
     color: green;
 }
 
-@media (max-width: 649px) {
+@media (max-width: 500px) {
+    .overlay {
+        display: grid;
+    }
     .div-time {
         display: none;
     }
