--- a/styles/home.css
+++ b/styles/home.css
@@ -290,7 +290,10 @@ body {
     .div-top-right {
         background-color: var(--dark-accent-color);
         position: fixed;
-        inset: 0;
+        top: 3.5rem;
+        right: 0;
+        left: 0;
+        bottom: 0;
         width: 100%;
         height: 100vh;
         display: none;
