--- a/styles/home.css
+++ b/styles/home.css
@@ -17,6 +17,7 @@ body {
 }
 .container-home{
     visibility: visible;
+    height: 100dvh;
     width: 100%;
     margin: 0;
     padding: 0;
@@ -28,6 +29,13 @@ body {
     background-color: var(--gray-background);
     left: 0;
     
+}
+
+.show {
+    display: block;
+}
+.hide {
+    display: none;
 }
 
 .overlay {
@@ -71,6 +79,7 @@ body {
     bottom: 0;
 }
 .div-right {
+    display: none;
     position: fixed;
     width: 25%;
     background-color: var(--white-color);
@@ -95,6 +104,14 @@ body {
     grid-template-columns: 1fr 1fr 1fr;
     z-index: 1;
 }
+.cart-icon {
+    position: relative;
+}
+.cart-quantity {
+    color: orange;
+    position: absolute;
+    top: -1rem;
+}
 .div-menu {
     display: none;
     height: 100%;
@@ -118,22 +135,27 @@ body {
 .div-main {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    gap: 2.5rem;
+    gap: 1rem;
     margin-top: 3.5rem;
     margin-left: 10%;
     margin-right: 30%;
     transition: opacity, 0.5s;
     margin-bottom: 10%;
+    padding-bottom: 10%;
     
     
+}
+.div-smallBoxes {
+    transition: all 0.5s;
 }
 .div-smallBoxes:hover {
     cursor: pointer;
-    opacity: 0.7;
+    opacity: 0.8;
+    transform: translateY(-0.5rem);
 
 }
 .div-smallBoxes:active {
-    opacity: 0.1;
+    opacity: 0.5;
 }
 .button-logout {
     background-color: red;
@@ -193,8 +215,10 @@ body {
     grid-template-columns: 2fr 1fr 1fr;
     background-color: var(--gray-background);
     height: 50%;
+    border-radius: 1rem;
     overflow-y: auto;
     overflow-x: hidden;
+    padding: 1%;
     
 }
 
@@ -218,7 +242,10 @@ body {
 
 
 .div-cart-checkout{
+    height: fit-content;
     color: var(--dark-accent-color);
+    margin-bottom: 10%;
+    overflow: auto;
 }
 .div-cart-amountDue, .div-cart-payment, .div-cart-change {
     display: grid;
@@ -309,10 +336,20 @@ body {
         width: 100%;
     }
     .div-right {
-        display: none;
+        position: fixed;
+        width: 100%;
+        height: 90vh;
+        padding: 0;
+        top: 3.5rem;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        z-index: 20;
+        overflow: auto;
+        
     }
     .div-cart-checkout {
-        margin-bottom: 100px;
+        padding-bottom: 4.5;
     }
     .div-main {
         display: grid;
@@ -347,7 +384,16 @@ body {
         display: none;
     }
     .div-right {
-        display: none;
+        position: fixed;
+        width: 100%;
+        height: 100vh;
+        top: 3.5rem;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        z-index: 20;
+        overflow: auto;
+        padding: 0;
     }
     .div-cart-icon {
         display: flex;
@@ -393,13 +439,22 @@ body {
     }
    
     .div-right {
-        display: none;
+        position: fixed;
+        width: 100%;
+        height: 100dvh;
+        top: 3.5rem;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        z-index: 20;
+        overflow: auto;
+        padding: 0;
     }
    
     .div-main {
         display: grid;
         width: 100%;
-        grid-template-columns: 1fr 1fr 1fr 1fr;
+        grid-template-columns: 1fr 1fr 1fr;
         place-items: center;
         gap: 1rem;
         margin-top: 3.5rem;
@@ -413,7 +468,7 @@ body {
 
 }
 
-@media (min-width: 1230px) and (max-width: 1330px){
+@media (min-width: 1230px){
     .div-top {
         display: grid;
         grid-template-columns: 1fr 1fr 1fr;
@@ -422,6 +477,7 @@ body {
        
     }
     .div-right {
+        display: block;
         position: fixed;
         width: 400px;
         right: 0;
@@ -430,15 +486,13 @@ body {
         overflow-y: auto;
         overflow-x: hidden;
     }
-    .div-cart-checkout {
-        margin-bottom: 10%;
-    }
+   
     .div-main {
         display: grid;
         grid-template-columns: 1fr 1fr 1fr;
         gap: 1rem;
         margin-top: 3.5rem;
-        margin-left: 1%;
+        margin-left: 10%;
         margin-right: 40%;
         transition: opacity, 1s;
         margin-bottom: 10%;
