--- a/styles/login.css
+++ b/styles/login.css
@@ -10,7 +10,7 @@
 }
 body {
     font-family: 'Poppins', sans-serif;
-    background-image: url(/loginbg.jfif);    
+    background-image: url(./loginbg.jfif);    
     height: fit-content;
     width: 100vw;
     background-repeat: no-repeat;
