Fixed login page size.

--- a/styles/login.css
+++ b/styles/login.css
@@ -109,5 +109,9 @@ a:link {
     .overlay {
         display: grid;
     }
+    body {
+        height: 100dvh;
+        overflow-x: hidden;
+    }
 }
 
