--- a/styles/home.css
+++ b/styles/home.css
@@ -79,14 +79,14 @@ body {
     bottom: 0;
 }
 .div-right {
-    display: none;
+    display: block;
     position: fixed;
     width: 25%;
     background-color: var(--white-color);
     color: var(--dark-accent-color);
     top: 4.5rem;
     right: 0;
-    bottom: 10%;
+    bottom: 2%;
     border-radius: 0.75rem;
     overflow-y: auto;
     overflow-x: hidden;
@@ -103,6 +103,7 @@ body {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     z-index: 1;
+    box-shadow: 0 1px 10px var(--dark-accent-color);
 }
 .cart-icon {
     position: relative;
@@ -263,6 +264,7 @@ body {
     text-align: center;
     height: 3.5rem;
     width: 100%;
+    background-color: var(--gray-background);
     
     border-radius: 1.80rem;
 }
@@ -336,6 +338,7 @@ body {
         width: 100%;
     }
     .div-right {
+        display: none;
         position: fixed;
         width: 100%;
         height: 90vh;
@@ -384,6 +387,7 @@ body {
         display: none;
     }
     .div-right {
+        display: none;
         position: fixed;
         width: 100%;
         height: 100vh;
@@ -439,6 +443,7 @@ body {
     }
    
     .div-right {
+        display: none;
         position: fixed;
         width: 100%;
         height: 100dvh;
@@ -476,15 +481,11 @@ body {
     
        
     }
+    .div-top-right {
+        display: flex;
+    }
     .div-right {
         display: block;
-        position: fixed;
-        width: 400px;
-        right: 0;
-        bottom: 10%;
-        border-radius: 0.75rem;
-        overflow-y: auto;
-        overflow-x: hidden;
     }
    
     .div-main {
@@ -492,7 +493,7 @@ body {
         grid-template-columns: 1fr 1fr 1fr;
         gap: 1rem;
         margin-top: 3.5rem;
-        margin-left: 10%;
+        margin-left: 5%;
         margin-right: 40%;
         transition: opacity, 1s;
         margin-bottom: 10%;
