--- a/styles/media.css
+++ b/styles/media.css
@@ -21,9 +21,10 @@ body {
     gap: 1rem;
     padding: 1rem;
     background-color: var(gray-background);
+    overflow-y: auto;
 }
 .div-video-image-view {
-    height: 100dvh;
+    height: fit-content;
     color: white;
     width: 50%;
     display: flex;
@@ -88,7 +89,7 @@ input[type="file"] {
     color: white;
     height: fit-content;
     width: 100%;
-    object-fit: contain;
+    object-fit: scale-down;
     object-position: center;
     
     
@@ -172,7 +173,7 @@ input[type="file"] {
     flex-direction: row;
     justify-content: space-between;
     width: 100%;
-    height: fit-content;
+    height: 100%;
     z-index: 100;
 }
 
@@ -206,28 +207,44 @@ input[type="file"] {
     color: green;
     border-bottom: 5px solid var(--gray-background);
 }
+@media (max-width: 580px) {
+    .previous-button {
+        left: 10%;
+    }
+    .next-button {
+        right: 10%;
+    }
+    
+}
 
 @media (max-width: 930px) {
     .container-media {
-        flex-direction: column;
-        align-items: start;
-        row-gap: 2rem;
-        height: 100dvh;
+        flex-direction: row;
+        justify-content: flex-start;
         overflow-y: auto;
+        height: 100dvh;
+        /* flex-wrap fixed the overlapping issue */
+        flex-wrap: wrap;
+        
     }
     .div-video-image-view {
         width: 100%;
-        height: 100%;
+        height: fit-content;
+        overflow-y: auto;
+        flex-wrap: wrap;
     }
     .div-media-right {
         width: 100%;
-        height: 100%;
+        height: fit-content;
+        overflow-y: auto;
+        flex-wrap: wrap;
     }
+  
     .div-file-category {
         width: 100vw;
         overflow-x: auto;
         overflow-y: hidden;
         justify-content: start;
-
     }
+    
 }
