--- a/styles/media.css
+++ b/styles/media.css
@@ -42,7 +42,8 @@ body {
     height: calc(100dvh - 3.5rem);
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: flex-start;
+    justify-content: flex-start;
     overflow-y: auto;
     overflow-x: hidden;
     border-radius: 10px;
@@ -142,17 +143,20 @@ input[type="file"] {
 }
 
 .div-video, .div-music, .div-photo {
+    box-sizing: border-box;
     display: flex ;
     background-color: var(--gray-background);
     color: var(--dark-accent-color);
     width: 100%;
-    height: calc(100dvh - 25dvh);
+    height: fit-content;
     justify-content: flex-start;
+    align-items: center;
     overflow-y: auto;
     overflow-x: hidden;
     flex-direction: column;
     white-space: nowrap;padding: 5px;
     box-sizing: border-box;   
+    padding: 1rem;
 }
 
 .div-music, .div-photo {
