--- a/styles/home.css
+++ b/styles/home.css
@@ -353,18 +353,20 @@ body {
     .div-cart-checkout {
         padding-bottom: 4.5;
     }
+    
     .div-main {
         display: grid;
         place-items: center;
         width: 100%;
-        grid-template-columns: 1fr;
-        row-gap: 2rem;
+        grid-template-columns: 0.5fr 0.5fr;
+        row-gap: 1rem;
         margin-top: 3.5rem;
         margin-right: 0;
         margin-left: 0;
         transition: opacity, 1s;
         margin-bottom: 4.5rem;   
     }
+    
 
     .container-home {
         width: 100%;
@@ -394,7 +396,7 @@ body {
         left: 0;
         right: 0;
         bottom: 0;
-        z-index: 20;
+        z-index: 100;
         overflow: auto;
         padding: 0;
     }
@@ -416,6 +418,9 @@ body {
         margin-right: 0;
         
         
+    }
+    .div-top-right {
+        display: flex;
     }
 
 }
@@ -468,6 +473,9 @@ body {
         margin-bottom: 10%;
         
         
+    }
+    .div-top-right {
+        display: flex;
     }
 
 }
