--- a/styles/media.css
+++ b/styles/media.css
@@ -88,7 +88,7 @@ input[type="file"] {
 .image-view {
     display: none;
     color: white;
-    height: fit-content;
+    height: 100dvh;
     width: 100%;
     object-fit: scale-down;
     object-position: center;
@@ -103,13 +103,29 @@ input[type="file"] {
     height: fit-content;
 }
 #p1_title {
+    overflow-x: auto;
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
     height: 50px;
     width: 100%;
     align-items: center;
     background-color: var(--dark-accent-color);
+    white-space: nowrap;
+}
+.video-list, .audio-list, .photo-list {
+    display: flex;
+    justify-items: flex-start;
+    align-items: center;
+    overflow-x: auto;
+    white-space: nowrap;
 
+} 
+.video-list::-webkit-scrollbar, .audio-list::-webkit-scrollbar, .photo-list::-webkit-scrollbar {
+    display: none;
+}
+
+#p1_title::-webkit-scrollbar {
+    display: none;
 }
 
 
@@ -183,22 +199,28 @@ input[type="file"] {
 
 .previous-button {
     position: absolute;
+    justify-content: center;
+    align-items: center;
     left: 30%;
     top: 50%;
     z-index: 100;
     height: 50px;
-    opacity: 0.9;
+    opacity: 0.8;
     display: none;
     padding: 1rem 2rem;
+    border: none;
 
 }
 
 .next-button {
     height: 50px;
     position: absolute;
+    justify-content: center;
+    align-items: center;
+    border: none;
     right: 30%;
     top: 50%;
-    opacity: 0.9;
+    opacity: 0.8;
     z-index: 100;
     display: none;
     padding: 1rem 2rem;
